# nix-security-tracker

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CVENix.cabal  LICENSE  LocalSecurityScanner.cabal  Procfile  README.md  default.nix  flake.nix  pyproject.toml  pyrightconfig.json  scan.sh  shell.nix
.github/codeql/: codeql-config.yaml
.github/workflows/: actionlint.yaml  builds.yaml  bump.yaml  checks.yaml  codeql.yaml  database-dumps.yaml  deploy.yaml  deployments.yaml  dry-activations.yaml  trigger.yaml  trusted-checks.yaml
.reuse/: dep5
contrib/: README.md  get-all-hydra-jobs.sh  grafana-dashboard.json  mkcredentials.sh  reset.sh
docs/: README.md  architecture.mermaid
docs/design/: 01_linkage.md  02_cpe-based_linkage.md
exe/: Main.hs
infra/: README.md  configuration.nix  container.nix  deploy.sh  host_keys  production.nix  secrets.nix  sectracker.nix  shell.nix  ssh-keys.nix  staging.nix  terraform.tf
infra/keys/: security-tracker-gh-actions
infra/npins/: sources.json
infra/secrets/: django-secret-key.age  gh-app-installation-id.age  gh-client.age  gh-secret.age  gh-webhook-secret.age  nixpkgs-security-tracker.2024-12-09.private-key.pem.age  nixpkgs-security-tracker.private-key.pem.age  staging-gh-app-installation-id.age  staging-gh-client.age  staging-gh-secret.age  staging-gh-webhook-secret.age  staging-nixpkgs-security-tracker.2024-12-09.private-key.pem.age
infra/terraform/: shell.nix  terraform.tf
nix/: README.md  dev-setup.nix  git-hooks.nix  overlay.nix  tests.nix  web-security-tracker.nix
nix/tests/: utils.nix  vm-basic.nix
npins/: default.nix  sources.json
pkgs/: README.md  default.nix
pkgs/python/: default.nix
pkgs/python/django-ninja/: default.nix
pkgs/python/django-pandas/: default.nix
pkgs/python/django-permission2/: default.nix
pkgs/python/django-pghistory/: default.nix
pkgs/python/django-pgpubsub/: default.nix
pkgs/python/django-pgtrigger/: default.nix
pkgs/python/pyngo/: default.nix
src/: README.md  manage.py  pyproject.toml
src/CVENix/: CVE.hs  Examples.hs  Matching.hs  NVD.hs  SBOM.hs  Types.hs  Utils.hs  WebData.hs
src/LocalSecurityScanner/: CVE.hs  Examples.hs  Matching.hs  NVD.hs  SBOM.hs  Types.hs  Utils.hs  WebData.hs
src/project/: settings.py
src/shared/: channels.py  context_processors.py  evaluation.py  fetchers.py  git.py  github.py  views.py
src/shared/auth/: github_state.py  github_webhook.py  utils.py
src/shared/listeners/: __init__.py  cache_issues.py  cache_suggestions.py  nix_channels.py  nix_evaluation.py  notify_users.py
src/shared/logs/: __init__.py  batches.py  collections.py  events.py  fetch.py  fetchers.py  folding.py  logs.py  raw_events.py
src/shared/migrations/: 0001_initial.py  0002_remove_cpe__product_remove_module__product_and_more.py  0003_nixchannel_nixlicense_nixmaintainer_nixoutput_and_more.py  0003_nixpkgsissue_id.py  0004_alter_nixlicense_spdx_id_alter_nixlicense_url.py  0005_alter_nixderivationmeta_homepage_and_more.py  0006_alter_nixlicense_short_name.py  0007_alter_nixlicense_full_name.py  0053_packageedit.py  (+31 more)
src/website/: MANIFEST.in  README.md  manage.py  pyproject.toml
src/webview/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
staging/: README.md  alejandrosame.keys  configuration.nix  container.nix  deploy.sh  dump-database.sh  fricklerhandwerk.keys  hardware-configuration.nix  kurisu-proxy.nix  raito-datacenter.nix  raito.keys  secrets.nix  sectracker.nix  staging_host_keys
staging/keys/: alejandrosame  erictapen  thubrecht
staging/npins/: sources.json
staging/s3-revproxy/: default.nix  module.nix  package.nix
staging/secrets/: dev-nixpkgs-security-tracker.2024-10-04.private-key.pem.age  django-secret-key.age  gh-app-installation-id.age  gh-client.age  gh-secret.age  gh-webhook-secret.age  glitchtip-dsn.age  s3-revproxy-env.age
tests/: Main.hs
tests/resources/: CVE-2006-7246.json  CVE-2023-2975.json  CVE-2023-32611.json  CVE-2023-5982.json
(+222 files in other folders)
