cabal-version:      3.0
name:               CVENix
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         dylan.green@obsidian.systems
-- copyright:
category:           Security
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CVENix.CVE,
                      CVENix.SBOM,
                      CVENix.Utils,
                      CVENix.Matching,
                      CVENix.Examples,
                      CVENix.Types,
                      CVENix.NVD

    build-depends:    base ^>=4.17.2.0,
                      aeson,
                      text,
                      bytestring,
                      lens,
                      directory,
                      time,
                      containers,
                      multi-containers,
                      http-streams,
                      HsOpenSSL,
                      io-streams,
                      network-uri,
                      unix


    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -threaded -O2

executable CVENix
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        optparse-applicative,
        unix,
        process,
        CVENix

    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options: -threaded -O2
