cabal-version:      3.0
name:               LocalSecurityScanner
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         dylan.green@obsidian.systems
-- copyright:
category:           Security
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  LocalSecurityScanner.CVE,
                      LocalSecurityScanner.SBOM,
                      LocalSecurityScanner.Utils,
                      LocalSecurityScanner.Matching,
                      LocalSecurityScanner.Examples,
                      LocalSecurityScanner.Types,
                      LocalSecurityScanner.NVD,
                      LocalSecurityScanner.WebData

    build-depends:    base ^>=4.17.2.0,
                      aeson,
                      text,
                      bytestring,
                      lens,
                      directory,
                      time,
                      containers,
                      multi-containers,
                      http-streams,
                      HsOpenSSL,
                      io-streams,
                      network-uri,
                      unix,
                      logging-effect,
                      prettyprinter,
                      logging-effect-colors,
                      transformers,
                      which


    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -threaded -O2

test-suite Tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: tests
    build-depends:
        base ^>=4.17.2.0,
        hspec,
        QuickCheck,
        HUnit,
        LocalSecurityScanner,
        aeson,
        text,

executable LocalSecurityScanner
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        optparse-applicative,
        unix,
        process,
        directory,
        LocalSecurityScanner

    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options: -threaded -O2
